Fix clipped server action menu

--- a/src/pages/configPage/subPages/serverSetting/index.scss
+++ b/src/pages/configPage/subPages/serverSetting/index.scss
@@ -8,6 +8,10 @@
   .vd-settings-section__body {
     overflow: auto;
   }
+
+  .vd-settings-group__content {
+    overflow: visible;
+  }
 }
 
 .server-setting-add-btn {
